// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component render pure 1`] = `
<div>
  <button
    class="uk-button uk-button-default "
  >
    Back
  </button>
</div>
`;

exports[`Button component render with size 1`] = `
<div>
  <button
    class="uk-button uk-button-default uk-button-large"
  >
    Back
  </button>
</div>
`;

exports[`Button component render with style 1`] = `
<div>
  <button
    class="uk-button uk-button-primary "
  >
    Back
  </button>
</div>
`;
